kubernetes/apps/observability/victoria-metrics/app/httproute-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    monitoring.webgrip.io/synthetic-check: blackbox-prometheus
spec:
  hostnames:
    - prometheus.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmsingle-vmsingle
          namespace: observability
          port: 8429
