kubernetes/apps/observability/victoria-metrics/app/securitypolicy-oidc-alertmanager.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: alertmanager-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: alertmanager
  oidc:
    provider:
      issuer: https://authentik.${SECRET_DOMAIN}/application/o/cluster-dashboards/
    clientIDRef:
      name: authentik-dashboards-oidc
    clientSecret:
      name: authentik-dashboards-oidc
    scopes:
      - openid
      - email
      - profile
      - offline_access
    redirectURL: https://alertmanager.${SECRET_DOMAIN}/oauth2/callback
    logoutPath: /logout
    defaultTokenTTL: 12h
    defaultRefreshTokenTTL: 168h
    cookieConfig:
      sameSite: Lax
